--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chris-reidy-opentable",
   "version": "1.0.0",
-  "description": "Chris Reidy - openTable Techcical Test",
+  "description": "Chris Reidy - OpenTable Technical Test",
   "main": "main.js",
   "directories": {
     "doc": "docs"
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chrisonside/chris-reidy-portfolio.git"
+    "url": "git+https://github.com/chrisonside/technical-test-ot.git"
   },
   "author": "Chris Reidy",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chrisonside/chris-reidy-portfolio/issues"
+    "url": "https://github.com/chrisonside/technical-test-ot.git/issues"
   },
-  "homepage": "https://github.com/chrisonside/chris-reidy-portfolio#readme",
+  "homepage": "https://github.com/chrisonside/technical-test-ot.git#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.2",
