--- a/package.json
+++ b/package.json
@@ -20,18 +20,31 @@
   },
   "homepage": "https://github.com/chrisonside/technical-test-ot.git#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7"
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "7.2.0",
+    "browser-sync": "latest",
+    "browserify": "13.0.0",
+    "cpx": "^1.5.0",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "latest",
+    "gulp-concat": "latest",
+    "gulp-cssmin": "latest",
+    "gulp-plumber": "latest",
+    "gulp-replace": "^0.5.4",
+    "gulp-sass": "latest",
+    "gulp-sequence": "latest",
+    "gulp-shell": "latest",
+    "gulp-sourcemaps": "latest",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify-es": "^0.1.3",
+    "gulp-util": "3.0.7",
+    "psi": "latest",
+    "rimraf": "^2.6.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  },
+  "browserify": {
+    "transform": [["babelify", { "presets": ["es2015"] }]]
   }
 }
-
